<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@color/frameBackground">

        <ImageView
            android:id="@+id/frameImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/your_image"
            android:contentDescription="@string/image_description"/>

        <TextView
            android:id="@+id/frameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/placeholder_text"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/frameLayout"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_color_label" />

        <RadioGroup
            android:id="@+id/backgroundColorGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/colorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red" />
            <RadioButton
                android:id="@+id/colorBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_blue" />
            <RadioButton
                android:id="@+id/colorGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_green" />
        </RadioGroup>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_text_hint"
            android:inputType="text"
            android:textSize="16sp"
            android:maxWidth="300dp"
            android:autofillHints="name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_color_label" />

        <RadioGroup
            android:id="@+id/textColorGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/textColorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_red" />
            <RadioButton
                android:id="@+id/textColorBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_blue" />
            <RadioButton
                android:id="@+id/textColorGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_green" />
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/boldSwitch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/bold_text_switch"
            android:padding="8dp"/>
    </LinearLayout>
</RelativeLayout>